# ChangeLog for media-video/ov51x-jpeg
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2007; Davide Cendron (scen) <scen@gentoo.org>
  ov51x-jpeg-1.0.0.ebuild:
  Fixed SRC_URI for previous 1.0.0 version

  09 Nov 2007; Davide Cendron (scen) <scen@gentoo.org>
  +ov51x-jpeg-1.5.3.ebuild:
  Version bump

  26 Apr 2007; Ali Polatel (hawking) <polatel@gmail.com>
  ov51x-jpeg-1.0.0.ebuild:
  Removed redundant S=${WORKDIR}/${P}

  03 Apr 2007; Kevin Fullerton (kfullert)
  <kevin.fullerton@shotgun-suicide.co.uk> +ov51x-jpeg-1.0.0.ebuild,
  +metadata.xml:
  Ebuild for bug 170508
